--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-csso": "^3.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.3.0",
     "gulp-less": "^3.3.0",
     "gulp-plumber": "^1.1.0",
